devcontainer: set minimal light theme

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,9 +10,12 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "dbaeumer.vscode-eslint",
+                "mubaidr.minimal-mist",
                 "vscodevim.vim"
-            ]
+            ],
+            "settings": {
+                "workbench.colorTheme": "Minimal Mist Light"
+            }
         }
     }
 }
